force-app/main/default/objects/Apttus_Config2__TaxCertificate__c/Apttus_Config2__TaxCertificate__c.object-meta.xml
<CustomObject>
    <description>Represents a tax certificate</description>
    <label>Tax Certificate</label>
    <nameField>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Certificates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>