force-app/main/default/objects/Apttus_Config2__TaxCertificate__c/fields/Apttus_Config2__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ExpirationDate__c</fullName>
    <description>The certificate expiration date. The certificate becomes ineffective after this date.</description>
    <inlineHelpText>The certificate expiration date. The certificate becomes ineffective after this date.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>